--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 
+# H2 Setting
+
+spring.datasource.driverClassName=org.h2.Driver
+
+spring.datasource.url=jdbc:h2:~/video;AUTO_SERVER=TRUE
+
+spring.datasource.username=sa
+
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+
+spring.h2.console.path=/console
+
+spring.jpa.hibernate.ddl-auto=create
+
