--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.h2.console.path=/console
 
 spring.jpa.hibernate.ddl-auto=create
 
+#세션
+server.servlet.session.tracking-modes=cookie
+server.servlet.session.timeout=1800
+
