--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,30 @@
 
 # H2 Setting
-
-spring.datasource.driverClassName=org.h2.Driver
-
-spring.datasource.url=jdbc:h2:~/video;AUTO_SERVER=TRUE
-
-spring.datasource.username=sa
-
-spring.datasource.password=
-
-spring.h2.console.enabled=true
-
-spring.h2.console.path=/console
-
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 
 #세션
 server.servlet.session.tracking-modes=cookie
 server.servlet.session.timeout=1800
 
+#DB
+server.address=localhost
+server.port=8080
+
+# API 호출시, SQL 문을 콘솔에 출력한다.
+spring.jpa.show-sql=true
+
+# DDL 정의시 데이터베이스의 고유 기능을 사용합니다.
+# ex) 테이블 생성, 삭제 등
+spring.jpa.generate-ddl=true
+
+# MySQL 을 사용할 것.
+spring.jpa.database=mysql
+
+# MySQL 설정
+spring.datasource.url=jdbc:mysql://localhost:3306/tobi?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=dlcksdud12~
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# MySQL 상세 지정
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
