--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.messages.basename=errors
 
 
 # H2 Setting
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 
 #세션
 server.servlet.session.tracking-modes=cookie
@@ -21,13 +21,19 @@ server.servlet.session.timeout=1800
 #spring.jpa.generate-ddl=true
 #
 ## MySQL 을 사용할 것.
-#spring.jpa.database=mysql
+#spring.jpa.database=h2
 #
 ## MySQL 설정
 #spring.datasource.url=jdbc:mysql://localhost:3306/tobi?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
 #spring.datasource.username=root
 #spring.datasource.password=dlcksdud12~
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.datasource.url=jdbc:h2:~/community
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+
 #
 ## MySQL 상세 지정
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
