--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.hibernate.ddl-auto=create
 server.servlet.session.tracking-modes=cookie
 server.servlet.session.timeout=1800
 
+file.dir=/Users/leechanyoung/Downloads/image/communityFiles/
+
 #DB
 #server.address=localhost
 #server.port=8080
