jpa, h2database적용. 글 저장시 Layinitializeexception오류

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -1,5 +1,5 @@
-NotEmpty.loginUserForm.loginId = 아이디를 입력하지 않으셨습니다.
-NotEmpty.loginUserForm.password = 비밀번호를 입력하지 않으셨습니다.
+NotEmpty.loginMemberForm.loginId = 아이디를 입력하지 않으셨습니다.
+NotEmpty.loginMemberForm.password = 비밀번호를 입력하지 않으셨습니다.
 
 
 NotEmpty.addWritingForm.title=제목을 입력하세요.
