--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,10 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 }
 
 test {
