--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -3,12 +3,37 @@ spring:
     oauth2:
       client:
         registration:
+          #구글
           google:
             client-id: 939014473539-l709kb1kv45dbtdmavi3f8jf7lt6een7.apps.googleusercontent.com
             client-secret: KvidEf_gbQmQKQPTYwHoACuw
             scope:
               - email
               - profile
+          #페이스북
+          facebook:
+            client-id: 575414096791057
+            client-secret: bebccb1084c3a5386cb2b6f82975aa53
+            scope:
+              - email
+              - public_profile
+            #네이버
+          naver:
+            client-id: dOeO5FkMUdOhWUfOmzcV
+            client-secret: RFBBaaYmub
+            scope:
+              - name
+              - email
+            client-name: Naver
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+            #네이버 provider등록
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response #회원정보를 json으로 받는데 response라는 키 값으로 네이버가 리턴해줌
 
 
 
