--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -2,6 +2,6 @@ NotEmpty.loginMemberForm.loginId = 아이디를 입력하지 않으셨습니다.
 NotEmpty.loginMemberForm.password = 비밀번호를 입력하지 않으셨습니다.
 
 
-NotEmpty.addWritingForm.title=제목을 입력하세요.
-NotEmpty.addWritingForm.content=내용을 입력하세요.
-Range.addWritingForm.title=제목은 3글자에서 15자 이하이어야 합니다.
+NotEmpty.addboardForm.title=제목을 입력하세요.
+NotEmpty.addboardForm.content=내용을 입력하세요.
+Range.addboardForm.title=제목은 3글자에서 15자 이하이어야 합니다.
