batch사이즈 100으로 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
+        default_batch_fetch_size: 100
         format_sql: true
   mvc:
     ignore-default-model-on-redirect: false
